2018-06-24  Charlie Zender  <zender@uci.edu>

	* Draft rgn_rnm.sh and rgn_rgr.sh to regrid regional ESM output

2018-06-22  Charlie Zender  <zender@uci.edu>

	* Add nVertLevelsP1 to ncremap MPAS permution list

2018-06-19  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.6-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.6-alpha01: Ybor';git push
	git tag -a 4.7.6-alpha01 -m 'Nearly functionally identical to 4.7.5;ntm->udt;no lat/lon crd';git push --tags

	* Remove self-referential "coordinates" attribute from unstructured lat/lon coordinates

	* Tidy nco.texi

2018-06-17  Charlie Zender  <zender@uci.edu>

	* Change semantics from "ntm" for non-atomic types to "udt" for user-defined types

2018-06-10  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.5 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.5: Salient Detail';git push
	git tag -a 4.7.5 -m 'Fix ncremap 4.7.4 CLM PJCS bug;ncml:XML;CDL/XML/JSN ENUM/VLEN;dap4://;ncap2 pack();mpassi';git push --tags

2018-06-09  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.5-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.5-alpha07: Ventura Paddle';git push
	git tag -a 4.7.5-alpha07 -m 'Fix ncremap 4.7.4 CLM bug;ncml:XML;safe CDL ENUM;complete XML ENUM';git push --tags

	* Prefix or postfix XML tags with ncml: and :ncml

2018-06-08  Charlie Zender  <zender@uci.edu>

	* Add enum type to XML variable definition as per toolsUI output

	* CDL'ize ENUM types and values before printing. Round-trip dump/gen now works!

2018-06-05  Charlie Zender  <zender@uci.edu>

	* Fix algorithm to always check sizes of candidate unstructured	dimensions even if from database
	Failures then fall-back to PJCS mechanism of searching for dimension with expected size

	* CDL print dimension ID for dbg_lvl >= 2

2018-06-04  Charlie Zender  <zender@uci.edu>

	* Remove "gridcell" from list of column dimensions in nco_rgr_wgt() to fix ELM SGS rgr problem encountered by Sterling

	* NCO 4.7.5-alpha06 release procedure: