@@ -1,3 +1,7 @@
+2018-06-26  Charlie Zender  <zender@uci.edu>
+
+	* Clean-up debug messages co-printed with sanitize workaround -D 73
+
 2018-06-24  Charlie Zender  <zender@uci.edu>
 
 	* Draft rgn_rnm.sh and rgn_rgr.sh to regrid regional ESM output
